Add password protection

--- a/admin.html
+++ b/admin.html
@@ -345,6 +345,7 @@
 
 <script src="storage.js"></script>
 <script>
+  showAuthGate();
   let games = loadData("games");
   let sounds = loadData("sounds");
   let state = loadData("state");
