--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
 
 <script src="storage.js"></script>
 <script>
+  showAuthGate();
   let state = loadData("state");
   let games = loadData("games");
   let qualifiers = loadData("qualifiers");
